--- a/app/app/src/main/res/layout/activity_camera.xml
+++ b/app/app/src/main/res/layout/activity_camera.xml
@@ -72,5 +72,13 @@
         android:layout_marginTop="14dp"
         app:srcCompat="@mipmap/ic_launcher" />
 
+    <Button
+        android:text="Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView"
+        android:layout_alignStart="@+id/submit_button"
+        android:id="@+id/button" />
+
 
 </RelativeLayout>
