--- a/app/app/src/main/res/layout/activity_camera.xml
+++ b/app/app/src/main/res/layout/activity_camera.xml
@@ -11,40 +11,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.eriknakamura.skinsense.CameraActivity">
 
-    <TextView
-        android:id="@+id/asksymptoms"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:text="Please check off below all the symptoms you have been experiencing in your skin lesion" />
-
-    <CheckBox
-        android:id="@+id/itchiness"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@id/asksymptoms"
-        android:layout_marginTop="30dp"
-        android:text="Itchiness" />
-
-    <CheckBox
-        android:id="@+id/pain"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@id/asksymptoms"
-        android:layout_marginTop="60dp"
-        android:text="Pain" />
-
-    <CheckBox
-        android:id="@+id/burning"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@id/pain"
-        android:text="Burning" />
-
     <Button
         android:id="@+id/submit_button"
         android:layout_width="wrap_content"
@@ -54,31 +20,21 @@
         android:layout_marginBottom="14dp"
         android:text="Submit info" />
 
-
-
     <Button
         android:id="@+id/picture_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Please take a picture"
-        android:layout_below="@id/burning"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_below="@id/picture_button"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         android:layout_marginTop="14dp"
-        app:srcCompat="@mipmap/ic_launcher" />
-
-    <Button
-        android:text="Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView"
-        android:layout_alignStart="@+id/submit_button"
-        android:id="@+id/button" />
-
+        app:srcCompat="@mipmap/ic_launcher"
+        android:layout_below="@+id/picture_button"
+        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
