--- a/app/app/src/main/res/layout/activity_camera.xml
+++ b/app/app/src/main/res/layout/activity_camera.xml
@@ -37,4 +37,13 @@
         android:layout_below="@+id/picture_button"
         android:layout_centerHorizontal="true"/>
 
+    <Button
+        android:text="Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="23dp"
+        android:id="@+id/jank_button" />
+
 </RelativeLayout>
