--- a/app/app/src/main/res/layout/activity_camera.xml
+++ b/app/app/src/main/res/layout/activity_camera.xml
@@ -13,7 +13,7 @@
 
     <Button
         android:id="@+id/submit_button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
@@ -22,28 +22,27 @@
 
     <Button
         android:id="@+id/picture_button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Please take a picture"
+        android:text="Take a picture"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
+    <Button
+        android:text="Upload"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/jank_button"
+        android:layout_above="@+id/submit_button"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="15dp" />
+
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_marginTop="14dp"
-        app:srcCompat="@mipmap/ic_launcher"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        app:srcCompat="@drawable/back_hand"
         android:layout_below="@+id/picture_button"
-        android:layout_centerHorizontal="true"/>
-
-    <Button
-        android:text="Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="23dp"
-        android:id="@+id/jank_button" />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
