--- a/app/app/src/main/res/layout/activity_camera.xml
+++ b/app/app/src/main/res/layout/activity_camera.xml
@@ -45,4 +45,14 @@
         android:layout_below="@+id/picture_button"
         android:layout_centerHorizontal="true" />
 
+    <ProgressBar
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:layout_alignTop="@+id/jank_button"
+        android:layout_alignParentStart="true"
+        android:id="@+id/progressBar"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:indeterminate="true"/>
+
 </RelativeLayout>
